Fix header spacing

--- a/src/pages/about/style.less
+++ b/src/pages/about/style.less
@@ -1,8 +1,6 @@
 @import "../../styles/mixins.less";
 
 .about {
-  margin: 0 10vw 80px 10vw;
-  .about-header {
-    .header();
-  }
+  padding-bottom: 100px;
+  .section()
 }
