--- a/src/pages/get-involved/style.less
+++ b/src/pages/get-involved/style.less
@@ -2,9 +2,7 @@
 @import '../../styles/mixins.less';
 
 .get-involved {
-  .get-involved-header {
-    .header();
-  }
+  .section();
 
   .container {
     display: flex;
