--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -1,3 +1,8 @@
+.section {
+  margin: 0 10vw 80px 10vw;
+  .header()
+}
+
 .header {
   h1 {
     font-size: 3em;
